# notes-operations-research

./: .gitignore  README.md  TODOME.md  pyproject.toml  requirements.txt
Coursera : Discrete Optimization/_boilerplate_/: functions.py  main.py
Coursera : Discrete Optimization/facility_location/: explore_data.py  footprints.json  functions.py  main.py  save_footprints.py
Coursera : Discrete Optimization/graph_coloring/: footprints.json  functions.py  main.py  save_footprints.py
Coursera : Discrete Optimization/knapsack/: footprints.json  functions.py  main.py  solver.py
Internal : Develop Custom Solvers/: formulation_example.ipynb  pyvis_networkx.html  simplex_tableau.py  solvers.py  solvers_usage.ipynb  test_solvers_cases.py
Udemy : AI and Meta-Heuristics (Combinatorial Optimization) Python/: breadth_first_search.py
Udemy : Dynamic programming/: 03.fibonacci-tabulation.ipynb
doc/: 02.Simplex Method.md  Constraint Programming.md  Download cbc.md  Download ipopt.md  Dual Problem and Sensitivity.md  Genetic Algorithms.md  Genetic vs Particle.md  How to Install Solvers.md  Multi-Objective Optimization.md  Particle Swarm Optimization.md  Simplex Method.md
docs/: _coursera_future_work_.md  _optimization_libraries_.md  _resources_.md  branch&bound_resources.md  constraint_programming.md  coursera_improvements.md  coursera_resources.md  graph_coloring_resources.md  gurobi_solver_options.md  highs_solver_options.md  install_solvers.md  knapsack_b&b_intuition.md  knapsack_resources.md  notes_b&c_summary.md  notes_bfs_dfs_astar.md  notes_constr_programming.md  notes_jssp_constraints.md  notes_propositional_logic_1.md  notes_special_constraints.md  or_tools_cp_sat_resources.md  pyomo_constraints.md  pyomo_infeasibilities.md  pyomo_warm_start.md  pyomo_warmstart.md  solver_options_highs.md  solvers_catalogue.md  traveling_salesman.md
notes_operations_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/02.pulp-sudoku/: sudokuout2.txt
(+99 files in other folders)
