[project]
name = "notes-operations-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "highspy>=1.8.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "pulp>=2.9.0",
    "pyomo>=6.8.2",
    "pyvis>=0.3.2",
    "scipy>=1.14.1",
]
