[project]
name = "notes-operations-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "highspy>=1.8.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "pulp>=2.9.0",
    "pyomo>=6.8.2",
    "pyvis>=0.3.2",
    "scipy>=1.14.1",
    "pytest>=8.3.4",
    "tqdm>=4.67.1",
]


[tool.ruff]
target-version = "py39"
line-length = 80
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Ignore unused import warnings
    "F401",
    # Ignore long messages outside the exception class warning
    "TRY003",
    # Ignore use of `assert` detected
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
